# pyWellSFM

./: .gitignore  .readthedocs.yml  COMMIT_STRATEGY.md  README.md  TODO.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-package.yml
docs/: .$pywellsfm_uml.drawio.bkp  conf.py  depositionalSimulator_context.md  examples.rst  index.rst  pywellsfm_uml.drawio
docs/_static/: theme_overrides.css
docs/pywellsfm/: pywellsfm.io.rst  pywellsfm.model.rst  pywellsfm.rst  pywellsfm.simulator.rst  pywellsfm.utils.rst
docs/user_guide/: user_guide.rst
jsonSchemas/: AccumulationModelSchema.json  CurveSchema.json  DESimulationSchema.json  DepositionalEnvironmentModelSchema.json  EnvironmentConditionModelSchema.json  EnvironmentConditionsModelSchema.json  FSSimulationDataSchema.json  FaciesModelSchema.json  RealizationDataSchema.json  ScenarioSchema.json  SimulationDataSchema.json  TabulatedFunctionSchema.json  UncertaintyCurveSchema.json  WellSchema.json
notebook/: computeWellAccommodation.ipynb
notebooks/: computeWellAccommodation.ipynb  wellSFM.ipynb
src/pywellsfm/: __init__.py
src/pywellsfm/io/: FSSimulatorIO.py  __init__.py  _common.py  accumulation_model_io.py  curve_io.py  depositional_environment_model_io.py  depositional_environment_simulation_io.py  environment_condition_model_io.py  facies_model_io.py  fssimulation_io.py  json_schema_validation.py  simulation_io.py  striplog_io.py  tabulated_function_io.py  well_io.py
src/pywellsfm/model/: AccommodationSpaceWellCalculator.py  AccumulationModel.py  Curve.py  DepositionalEnvironment.py  DepthAgeModel.py  Element.py  EnvironmentConditionModel.py  FSSimulationParameters.py  Facies.py  Marker.py  SimulationParameters.py  Well.py  __init__.py  enums.py
src/pywellsfm/notebook/: computeWellAccommodation.ipynb
src/pywellsfm/simulator/: AccommodationSimulator.py  AccumulationSimulator.py  DepositionalEnvironmentSimulator.py  EnvironmentConditionSimulator.py  FSSimulator.py  FSSimulatorRunner.py  Realization.py  TimeStepController.py  __init__.py  ensemble_simulator_skeleton.py
src/pywellsfm/utils/: __init__.py  geometry.py  helpers.py  interpolation.py  logging_utils.py
tests/: test_AccommodationSimulator.py  test_AccommodationSpaceWellCalculator.py  test_AccumulationModel.py  test_AccumulationModel_io.py  test_AccumulationSimulator.py  test_Curve.py  test_DepositionalEnvironment.py  test_DepositionalEnvironmentSimulator.py  test_DepthAgeModel.py  test_Element.py  test_EnvironmentConditionModel.py  test_EnvironmentConditionModel_io.py  test_EnvironmentConditionSimulator.py  test_FSSimulator.py  test_FaciesModel.py  test_Interpolator.py  test_Marker.py  test_TimeStepController.py  test_Well.py  test_Well_model_branches.py  test_curve_io.py  test_deposition_environment_model_io.py  test_deposition_environment_simulation_io.py  test_fssimulation_io.py  test_geometry.py  test_io_common.py  test_json_schema_validation.py  test_logging_utils.py  test_simulation_io.py  test_striplog_io.py  test_tabulated_function_io.py  test_well_io.py
tests/data/: accommodationUncertaintyCurves01.csv  accommodationUncertaintyCurves02.csv  accommodationUncertaintyCurves1.csv  accommodationUncertaintyCurves2.csv  accomodationArray.csv  bathyStepCurves.csv  bathyUncertaintyCurves.csv  eustatic_curve.csv  facies_model.json  simulation.json  striplog_csv.csv  subsidence_curve.csv  test_PolynomialInterpolatorExp.txt  well.json  wellLogs.csv
